<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_panda_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stefanoangeli12@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>my_panda_bringup</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <!-- Ignition dependency is specified in the ros_gz_sim package, 
    version can chosen using GZ_VERSION (or IGNITION_VERSION) env variable, 
    for details refer to the ros_gz_sim package -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>